--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
     "main": "server.js",
     "scripts": {
         "start": "nodemon app",
+        "startT": "nodemon test",
+
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.25.0",
         "dotenv": "^8.6.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
